<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Segoway Controller</string>
    <string name="menu_controlButton">Button Control</string>
    <string name="menu_controlAccelerometer">Accelerometer Control</string>
    <string name="menu_controlJoystick">Onscreen Joystick</string>
    <string name="menu_controlExternal">External Joystick</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_clearLog">Clear Log</string>
    <string name="menu_about">About</string>
    <string name="connecting_to_brain">Connecting to brain!</string>
    <string name="connected_to_brain">Connected to brain!</string>
    <string name="disconnected_from_brain">Disconnected from Brain.</string>
    <string name="could_not_create_socket">Could not create socket to Brain!</string>
    <string name="connection_failed">Connection failed!</string>
    <string name="could_not_close_socket_after_fail">Could not close socket after failed connection!</string>
    <string name="could_not_close_socket">Could not close socket!</string>
    <string name="temporary_streams_could_not_be_created">Temporary streams were not created!</string>
    <string name="connection_lost">Connection lost!</string>
    <string name="could_not_send_data">Could not send to Brain!</string><string name="exception_details_template">Exception: %s
Cause:     %s

</string>
    <string name="must_implement_interface_inputlistener"> must implement the interface IInputListener!</string>
    <string name="must_activate_blueooth_to_use_controller_features">You must activate Bluetooth to use controller features!</string>
    <string name="must_implement_interface_device_selected_listener"> must implement OnDeviceSelectedListener</string>
    <string name="bluetooth_was_turned_off">Bluetooth was turned off!</string>
    <string name="must_implement_interface_log_entry_clicked_listener"> must implement OnLogEntryClickedListener</string>
    <string name="select_a_bluetooth_device">Select a bluetooth device</string>
    <string name="press_back_button_to_return_to_log_list">Press the back button on your phone to return to the log list</string>

</resources>
